--- a/ThumbnailMaker_Terms_of_use.htm
+++ b/ThumbnailMaker_Terms_of_use.htm
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0086)https://agreement-api.herokuapp.com/a/4?name=Followers%20+&email=xuzhe6633222@yeah.net -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">   
+       
     <title>Terms_of_use</title>
     <style>
         .wrap {
@@ -42,11 +41,11 @@
 
 <body>
     <div class="wrap">
-        <h2>Terms & Condition</h2>
+        <h2>Terms &amp; Condition</h2>
         <h4>Member Account, Password and Security</h4>
         <p class="clearBot">You Will Receive A Password And Account Designation Upon Completing The App’s Registration Process. You Are Responsible For Maintaining The Confidentiality Of The Password And Account, And Are Fully Responsible For All Activities That Occur Under
             Your Password Or Account. You Agree To </p>
-        <p class="clearTop">–&gt; Immediately Notify <span class="appName">Thumbnail Maker</span> Of Any Unauthorized Use Of Your Password Or Account Or Any Other Breach Of Security,</p>
+        <p class="clearTop">–&gt; Immediately Notify <span class="appName">Followers  </span> Of Any Unauthorized Use Of Your Password Or Account Or Any Other Breach Of Security,</p>
         <h4>Changes to Terms or Services</h4>
         <p>We may modify the Terms at any time, in our sole discretion. If we do so, we’ll let you know either by posting the modified Terms on the Site or through other communications via the Services. It’s important that you review the Terms whenever we
             modify them because if you continue to use the Services after we have posted modified Terms on the Site or via the Services, you are indicating to us that you agree to be bound by the modified Terms. If you don’t agree to be bound by the modified
@@ -59,14 +58,14 @@
             <li>You are solely responsible for your conduct and any and all information or material including, without limitation, data, text, images, usernames, graphics, photos, profiles, audio and video clips, links (otherwise known as “Content”)
             </li>
             <li>Violation of any of these Terms will result in the immediate termination of your account.</li>
-            <li>Use the  our Services only for personal purposes (you may not use them for commercial purposes).
+            <li>Use the&nbsp; our Services only for personal purposes (you may not use them for commercial purposes).
             </li>
         </ol>
         <h4>Content and Content Rights</h4>
         <p>For purposes of these Terms: (i) “Content” means text, graphics, images, music, software, audio, video, works of authorship of any kind, and information or other materials that are posted, generated, provided or otherwise made available through
             the Services; and (ii) “User Content” means any Content that account holders (including you) provide to be made available through the Services. Content includes without limitation User Content.</p>
         <h4>Rights and Terms for Apps</h4>
-        <p><b>Rights in App Granted by Us.</b> Subject to your compliance with these Terms, we grant you a limited non-exclusive, non-transferable, non-serviceable license to download and install a copy of the App on a mobile device that you own or control
+        <p><b>Rights in App Granted by Us.</b>&nbsp;Subject to your compliance with these Terms, we grant you a limited non-exclusive, non-transferable, non-serviceable license to download and install a copy of the App on a mobile device that you own or control
             and to run such copy of the App solely for your own personal non-commercial purposes. You may not copy the App, except for making a reasonable number of copies for backup or archival purposes. Except as expressly permitted in these Terms,
             you may not: (i) copy, modify or create derivative works based on the App; (ii) distribute, transfer, sub license, lease, lend or rent the App to any third party; (iii) reverse engineer, de-compile or disassemble the App; or (iv) make the
             functionality of the App available to multiple users through any means. We reserve all rights in and to the App not expressly granted to you under these Terms.</p>
@@ -83,8 +82,8 @@
         <p>Our failure to enforce any right or provision of these Terms will not be considered a waiver of such right or provision. The waiver of any such right or provision will be effective only if in writing and signed by our duly authorized representative.
             Except as expressly set forth in these Terms, the exercise by either party of any of its remedies under these Terms will be without prejudice to its other remedies under these Terms or otherwise.</p>
         <h4>Contact Information</h4>
-        <p>If you have any questions about these Terms or the Services, please contact us at EMAIL:<span class="email">leehwaya91@gmail.com</span></p>
+        <p>If you have any questions about these Terms or the Services, please contact us at EMAIL:<span class="email">xuzhe6633222@yeah.net</span></p>
     </div>
-</body>
 
-</html>
+
+</body></html>
