--- a/ThumbnailMaker_Privacy_Agreement.htm
+++ b/ThumbnailMaker_Privacy_Agreement.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0086)https://agreement-api.herokuapp.com/a/3?name=Followers%20+&email=xuzhe6633222@yeah.net -->
+<!-- saved from url=(0111)https://agreement-api.herokuapp.com/a/3?name=Followers%20+%20Likes%20Up%20Thumbnail&email=xuzhe6633222@yeah.net -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,9 +32,9 @@
 
 <body>
     <div class="wrap">
-        <h2>Privacy Policy of <span class="appName">Followers  </span></h2>
+        <h2>Privacy Policy of <span class="appName">Followers   Likes Up Thumbnail</span></h2>
         <p>
-            This Privacy Policy explains what information may be collected through the <span class="appName">Followers  </span>, how such information may be used and/or shared with others, how we safeguard it and how you may access and control.
+            This Privacy Policy explains what information may be collected through the <span class="appName">Followers   Likes Up Thumbnail</span>, how such information may be used and/or shared with others, how we safeguard it and how you may access and control.
         </p>
         <h5>1.Information We Collect</h5>
         <p>We use Personal Data we collect to provide the Services, personalize content, remember information to help you efficiently access your account, analyze how the Services are used, diagnose service or technical problems, maintain security, monitor
@@ -87,7 +87,7 @@
         <p>We ask that you not send us, and you not disclose, any sensitive Personal Information (e.g., information related to racial or ethnic origin, political opinions, religion or other beliefs, health, sexual orientation, criminal background or membership
             in past organizations, including trade union memberships) on or through an Application, the Services or the Site or otherwise to us.&nbsp;</p>
         <h5>8.Changes</h5>
-        <p><span class="appName">Followers  </span> has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay
+        <p><span class="appName">Followers   Likes Up Thumbnail</span> has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay
             informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
     </div>
 
